# egeland_rag_test

./: .gitignore  CLAUDE.md  Dockerfile  Readme.md  compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
app/: .env.example  config.py  main.py
app/core/: config.py  database.py  prompts.py
app/models/: chat_log.py  schemas.py
app/routers/: chat.py  health.py
app/services/: db_service.py
app/services/agent/: audio.py  image.py  rag_agent.py
app/services/agent/tools/: messages.py  rag.py  retrieve.py
bot/: .env-example  bot.py
bot/handlers/: __init__.py  audio.py  chat.py  image.py  user.py
data_pipeline/: offline_vector_ingestion.py
migrations/: env.py
migrations/versions/: 0510d30bd14e_init.py
tests/: conftest.py  test_main.py
