[project]
name = "egeland-rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.23.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.0",
    "fastembed>=0.7.4",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "markdown>=3.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "unstructured>=0.18.21",
]
